dev/testdata/common/1-access-log-config-2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: AccessLogConfig
metadata:
  name: access-log-config-2
  annotations:
    envoy.kaasops.io/auto-generated-filename: "true"
    envoy.kaasops.io/description: "Extended JSON format file access logger configuration for Envoy with test field"
spec:
  name: envoy.access_loggers
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
    path: /tmp
    log_format:
      json_format:
        message: "%LOCAL_REPLY_BODY%"
        duration: "%DURATION%"
        remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
        x_real_ip: "%REQ(X-Real-IP)%"
        request_start_time: "%START_TIME%"
        bytes_sent: "%BYTES_SENT%"
        http_referer: "%REQ(Referer)%"
        http_user_agent: "%REQ(User-Agent)%"
        test_field: "test"
