dev/testdata/common/1-http-filter.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: HttpFilter
metadata:
  name: http-filter
  annotations:
    envoy.kaasops.io/description: "Basic Envoy router HTTP filter"
spec:
  - name: envoy.filters.http.router
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
