dev/testdata/common/1-listener-http.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: http
  annotations:
    envoy.kaasops.io/description: "HTTP listener on port 8080"
spec:
  name: http
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8080
