dev/testdata/common/1-route-demo2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: demo2
  annotations:
    envoy.kaasops.io/description: "Route returning a JSON message for path /demo2"
spec:
  - name: demo2
    match:
      path: "/demo2"
    direct_response:
      status: 200
      body:
        inline_string: "{\"message\":\"demo2\"}"
