dev/testdata/common/1-route-root.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: route-root
  annotations:
    envoy.kaasops.io/description: "Route returning a JSON message for path /"
spec:
  - name: root
    match:
      path: "/"
    direct_response:
      status: 200
      body:
        inline_string: "{\"message\":\"root\"}"
