dev/testdata/common/1-secret-dev1-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvekNDQW91Z0F3SUJBZ0lVRUExR2R4R0dmVE9VSWFHVitVYkxLb0t3VHVJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R0RBV0JnTlZCQU1NCkQyUmxkakV1YTJGaGMyOXdjeTVwYnpBZUZ3MHlOVEExTVRZd05qTTJNVFJhRncweU5qQTFNVFl3TmpNMk1UUmEKTUd3eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMFpURU5NQXNHQTFVRUJ3d0VRMmwwZVRFVgpNQk1HQTFVRUNnd01UM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQy9xbGdwTnI0bVhsWUgKTXVzV1lQeG5EeXFmSnh6NDlSeXFtc3Naa1NvSUFJM2h1Zmk3SE9QQ3pRemFuTzJLejdYTkhvSHkxNFdjWXlQNgo2NEo1OVl5cWpsS2NjM2F0andyNXBkM0ZGTmhNSXRJLy82cVlkVU83V2RNK2ZkVk51UVRmQ2ZJNnlLUHBKTVNZCmtYeUxFUlJjSG1QWXNLd1RJL05GbnRuUkRSUGpOaTVDdkE3T0ZoeDZhdG9LVlcxek1EN2I0RW5LamhNckkvb3kKbEhZS0NwMmpzbW5ZRWQrTml2ejhMY1JjM3lQV0NQeEJKQklpcVo5amI5STFMU0cydlZlUU1wQ1g4NjBWUW9wawpXbjQ3UmFQWi9UZ1NNS [...]
kind: Secret
metadata:
  name: dev1-kaasops-io
  annotations:
    envoy.kaasops.io/domains: dev1.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
