dev/testdata/common/1-secret-dev2-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvekNDQW91Z0F3SUJBZ0lVTDRVSlZ2aC9oRnBMOVBlU09YMVZaNWJHQWpBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R0RBV0JnTlZCQU1NCkQyUmxkakl1YTJGaGMyOXdjeTVwYnpBZUZ3MHlOVEExTVRZd05qTTNNVFJhRncweU5qQTFNVFl3TmpNM01UUmEKTUd3eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMFpURU5NQXNHQTFVRUJ3d0VRMmwwZVRFVgpNQk1HQTFVRUNnd01UM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktNd2dnU2ZBZ0VBQW9JQkFRRE9EYURIL0xES0JUQXgKKys1QVdybkJzejFoRW1IaWhXa3N6VUtSVUNlOXVtQ2VaNU52SmRUNUd4cXlzK3RZZmM2cHhKNFNDTWtESVNWNQo5clJQTVZlTmtncitqVkhnaUl3Y2hoa2VienFXUys0Y2xiYnUrc1IweWZNeTg4b0E2VEVTRks4UUtWOXRwZTA0CmNtUXIyQWFlaXhYWXpwcWxKTkRYL3BEUmJlZWxDaWg0ZnFWd0FzK2dZSDk0U1g0NENPZHNXRjJhQnFvLzRjVXUKYXIxVUJRZ05uM3V1ZXBES2VrQXZYb2lvNkRjS21HV3B0NDVPQk9idkptV1RoV0ZxS05NMDVWc2VVcUJaazIvSApPeTBjZ29OTGsvWFkrd [...]
kind: Secret
metadata:
  name: dev2-kaasops-io
  annotations:
    envoy.kaasops.io/domains: dev2.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
