dev/testdata/common/1-secret-example3-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURyekNDQXBlZ0F3SUJBZ0lVSnVsRThqRjBKbC9CQk9lazBPOUhINllpQjVjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4SERBYUJnTlZCQU1NCkUyVjRZVzF3YkdVekxtdGhZWE52Y0hNdWFXOHdIaGNOTWpVd05ETXdNVEl5T1RVeFdoY05Nall3TkRNd01USXkKT1RVeFdqQndNUXN3Q1FZRFZRUUdFd0pWVXpFT01Bd0dBMVVFQ0F3RlUzUmhkR1V4RFRBTEJnTlZCQWNNQkVOcApkSGt4RlRBVEJnTlZCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ2txNEFQK1NKVUJLRHQKZ0tBTHdMOHFUSDdwWGRyVnJ6aWZsM1ZnTnB3S0RRTjFtdm1OcXkvcXl2NC93U3g3c2VWNDZoL01HZzl6RXN4YQo4SFJndWt4ZUMrblVlSG1hZkFWcDkvdFBFMkZOLzluczMyOThYWUdtejVUNndXT3YzK3p2VW5EZ1ZDSjlBM0V6CmlDUjZ1d3g3SFAxZ1BLZitnZEVxTkVQcU5VN0RYRDNDQnl4bjE1aHI4Vmd0YTNVWE5QY3V0RXMzSytWbkxUZU4KMHZYRHY4UkdOMUx4Qm1kUHRVT29jTGRjWEM5aGhKZ09qdG14V09XUTdiRTUrV05MQnEybE9NeHV3NUFGQjVKWQpDRlk1UlRZRmRKM0VxQ [...]
kind: Secret
metadata:
  name: example3-kaasops-io
  annotations:
    envoy.kaasops.io/domains: example3.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
