dev/testdata/common/2-https-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: https-template
  annotations:
    envoy.kaasops.io/description: "HTTPS virtual service template with TLS auto-discovery"
spec:
  listener:
    name: https
  accessLogConfig:
    name: access-log-config
  additionalHttpFilters:
    - name: http-filter
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test-virtual-host
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello from template\"}"
