dev/testdata/common/dev-vs-https.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: dev-virtual-service
  annotations:
    envoy.kaasops.io/node-id: dev
    envoy.kaasops.io/editable: "true"
    envoy.kaasops.io/description: "Editable HTTPS virtual service with TLS auto-discovery for dev environment"
  labels:
    exc-name: virtual-service
    exc-access-group: dev
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test-virtual-host
    domains:
      - example.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello\"}"
