dev/testdata/common/dev-vs-root-route.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: dev-vs-root-route
  annotations:
    envoy.kaasops.io/node-id: dev
    envoy.kaasops.io/editable: "true"
  labels:
    exc-name: vs-root-route
    exc-access-group: dev
spec:
  template:
    name: https-template-without-root-route
  virtualHost:
    domains:
      - dev1.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello\"}"
